more jaxb-compliant build updates